# RunGuard

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml
docs/adr/: ADR-0001-modular-monolith.md
docs/milestones/: M0-project-foundation.md  M1-canonical-experiment-model.md  README.md
src/runguard/cli/: main.py
tests/unit/: test_cli.py  text_cli.py
